--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,7 +7,8 @@
         <body>
            <div class="main-content">
                {{>header}}
-               <p>Created by {{name}}</p>
+               <p>This site was created by Tarun Rahuja for purely educational purposes (learning the fundamentals of nodejs)</p>
+               {{!-- <p>Created by {{name}}</p> --}}
            </div>
             <img class="portrait" src = '/img/cvpic.png'>
             {{>footer}}
